--- a/kltn/server/.env
+++ b/kltn/server/.env
@@ -2,3 +2,6 @@ PORT = 5000
 CLIENT_URL = http://localhost:3000
 MONGODB_DB = mongodb://127.0.0.1:27017/mydatabase
 # REACT_APP_PUBLIC_URL=/assets
+MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
+JWT_SECRET=your_jwt_secret
+
