--- a/kltn/client/package.json
+++ b/kltn/client/package.json
@@ -10,16 +10,20 @@
     "@ckeditor/ckeditor5-upload": "^41.4.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.8",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "mapbox-gl": "^3.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
