--- a/kltn/client/package.json
+++ b/kltn/client/package.json
@@ -18,10 +18,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "ckeditor5-custom-build": "file:ckeditor5",
     "mapbox-gl": "^3.4.0",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
