--- a/kltn/server/package.json
+++ b/kltn/server/package.json
@@ -1,13 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "A Node.js server application.",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js",
-    "start:pm2": "pm2 start ecosystem.config.js",
-    "build": "babel server.js --out-file server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +16,12 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/node": "^7.23.9",
-    "@babel/preset-env": "^7.24.5",
-    "nodemon": "^3.1.0"
+    "@babel/preset-env": "^7.24.5"
   }
 }
