--- a/kltn/server/.env
+++ b/kltn/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-CLIENT_URL=http://103.179.188.20:3000
+CLIENT_URL=http://localhost:3000
 CLIENT_URL_NGROK=https://890c-2402-800-634f-74d3-95e4-fbe6-38e-f7ad.ngrok-free.app
 MONGODB_DB=mongodb://127.0.0.1:27017/mydatabase
 MONGO_URI=mongodb://127.0.0.1:27017/mydatabase
