--- a/kltn/server/package.json
+++ b/kltn/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon --exec babel-node server.js"
+    "start": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "pm2": "^5.3.0"
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
